@@ -243,19 +243,19 @@ int execute_event(object *op, int eventcode, object *activator, object *third, c
                 object *env = object_get_env_recursive(tmp);
                 LOG(llevError, "Event object without title at %d/%d in map %s\n", env->x, env->y, env->map->name);
                 object_remove(tmp);
-                object_free_drop_inventory(tmp);
+                object_free2(tmp, FREE_OBJ_NO_DESTROY_CALLBACK);
             } else if (tmp->slaying == NULL) {
                 object *env = object_get_env_recursive(tmp);
                 LOG(llevError, "Event object without slaying at %d/%d in map %s\n", env->x, env->y, env->map->name);
                 object_remove(tmp);
-                object_free_drop_inventory(tmp);
+                object_free2(tmp, FREE_OBJ_NO_DESTROY_CALLBACK);
             } else {
                 plugin = plugins_find_plugin(tmp->title);
                 if (plugin == NULL) {
                     object *env = object_get_env_recursive(tmp);
                     LOG(llevError, "The requested plugin doesn't exit: %s at %d/%d in map %s\n", tmp->title, env->x, env->y, env->map->name);
                     object_remove(tmp);
-                    object_free_drop_inventory(tmp);
+                    object_free2(tmp, FREE_OBJ_NO_DESTROY_CALLBACK);
                 } else {
                     int rvt = 0;
                     int *rv;
@@ -266,7 +266,7 @@ int execute_event(object *op, int eventcode, object *activator, object *third, c
                         LOG(llevDebug, "Removing unique event %s\n", tmp->slaying);
 #endif
                         object_remove(tmp);
-                        object_free_drop_inventory(tmp);
+                        object_free2(tmp, FREE_OBJ_NO_DESTROY_CALLBACK);
                     }
                     return *rv;
                 }
@@ -3499,7 +3499,7 @@ void *cfapi_object_insert(int *type, ...) {
         robj = va_arg(args, object **);
         if (!map) {
             LOG(llevError, "cfapi_object_insert (0): called with NULL map, object %s!\n", op->name);
-            object_free_drop_inventory(op);
+            object_free2(op, FREE_OBJ_NO_DESTROY_CALLBACK);
             *robj = NULL;
         } else
             *robj = object_insert_in_map_at(op, map, orig, flag, x, y);
@@ -3513,7 +3513,7 @@ void *cfapi_object_insert(int *type, ...) {
         robj = va_arg(args, object **);
         if (!map) {
             LOG(llevError, "cfapi_object_insert (1): called with NULL map, object %s!\n", op->name);
-            object_free_drop_inventory(op);
+            object_free2(op, FREE_OBJ_NO_DESTROY_CALLBACK);
             *robj = NULL;
         } else
             *robj = object_insert_in_map_at(op, map, orig, flag, op->x, op->y);
@@ -3529,7 +3529,7 @@ void *cfapi_object_insert(int *type, ...) {
         robj = va_arg(args, object **);
         if (!map) {
             LOG(llevError, "cfapi_object_insert (0): called with NULL map, object %s!\n", op->name);
-            object_free_drop_inventory(op);
+            object_free2(op, FREE_OBJ_NO_DESTROY_CALLBACK);
             *robj = NULL;
         } else {
             int dir = object_find_free_spot(op, map, x, y, 0, SIZEOFFREE);
@@ -3548,7 +3548,7 @@ void *cfapi_object_insert(int *type, ...) {
         robj = va_arg(args, object **);
         if (!orig) {
             LOG(llevError, "cfapi_object_insert (3): called with NULL orig, object %s!\n", op->name);
-            object_free_drop_inventory(op);
+            object_free2(op, FREE_OBJ_NO_DESTROY_CALLBACK);
             *robj = NULL;
         } else
             *robj = object_insert_in_ob(op, orig);
@@ -3557,7 +3557,7 @@ void *cfapi_object_insert(int *type, ...) {
 
     default:
         LOG(llevError, "cfapi_object_insert (1): called with itype %d which is not valid, object %s!\n", itype, op->name);
-        object_free_drop_inventory(op);
+        object_free2(op, FREE_OBJ_NO_DESTROY_CALLBACK);
         *type = CFAPI_NONE;
         break;
     }
