@@ -192,7 +192,7 @@ void enter_player_savebed(object *op) {
         EXIT_Y(tmp) = op->contr->bed_y;
         enter_exit(op, tmp);
     }
-    object_free_drop_inventory(tmp);
+    object_free2(tmp, FREE_OBJ_NO_DESTROY_CALLBACK);
 }
 
 /**
@@ -822,7 +822,7 @@ void enter_exit(object *op, object *exit_ob) {
                 tmp = object_find_by_type_and_slaying(op, FORCE, PORTAL_DESTINATION_NAME);
                 if (tmp) {
                     object_remove(tmp);
-                    object_free_drop_inventory(tmp);
+                    object_free2(tmp, FREE_OBJ_NO_DESTROY_CALLBACK);
                 }
 
                 path_combine_and_normalize(exit_ob->map->path, EXIT_PATH(exit_ob), op->contr->savebed_map, sizeof(op->contr->savebed_map));
@@ -1077,7 +1077,7 @@ void process_events(void) {
             diff = stringbuffer_finish(sb);
             LOG(llevError, "%s\n", diff);
             free(diff);
-            object_free_drop_inventory(op);
+            object_free2(op, FREE_OBJ_NO_DESTROY_CALLBACK);
             continue;
         }
 
